# pymarginaleffects

./: .flake8  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Makefile  NEWS.md  README.md  README.qmd  _quarto.yml  debug.R  debug.py  mkdocs.yml  mtcars.csv  pyproject.toml  pyproject.toml.bak  requirements.txt  styles.css  test.R  test.py  testing_calls_to_be_added_to_tests.py  trash.R  trash.py  vincent.py
.github/workflows/: lint.yml  test.yml
benchmarks/: benchmark_autodiff.py
docs/: Makefile  get_started.md  get_started.qmd  reference.md
docs/api/: comparisons.md  hypotheses.md  predictions.md
docs/source/: conf.py  index.rst  modules.rst
marginaleffects/: __init__.py  buildplot.py  by.py  classes.py  comparisons.py  datagrid.py  doc_templates.py  docs.py  equivalence.py  estimands.py  evaluate_docs.py  formulaic.py  formulaic_utils.py  get_transform.py  getters.py  hypotheses.py  hypotheses_joint.py  hypothesis.py  hypothesis_formula.py  inject_docs.py  jax_dispatch.py  lp.py  marginaleffects.py  model_abstract.py  model_linearmodels.py  model_pyfixest.py  model_scikit.py  model_sklearn.py  model_statsmodels.py  narwhals_utils.py  p9.py  plot.py  plot_common.py  plot_comparisons.py  plot_predictions.py  plot_slopes.py  predictions.py  print.py  result.py  sanitize_model.py  (+10 more)
marginaleffects/autodiff/: __init__.py  comparisons.py
marginaleffects/linearmodels/: __init__.py
marginaleffects/plot/: __init__.py  common.py
marginaleffects/sklearn/: __init__.py
marginaleffects/statsmodels/: __init__.py  model.py
tests/: __init__.py  commented-out-test_slopes.py  conftest.py  helpers.py  test_analytic.py  test_autodiff.py  test_bugfix.py  test_buildplot.py  test_by.py  test_categorical.py  test_comparisons.py  test_comparisons_interaction.py  test_datagrid.py  test_datagrid_01.py  test_datagrid_02.py  test_dt_on_condition.py  test_equivalence.py  test_example.py  test_formula.py  test_formulaic_utils.py  test_hypotheses.py  test_hypotheses_joint.py  test_hypothesis.py  test_jss.py  test_linearmodels_panelols.py  test_missing.py  test_mixed.py  test_newdata.py  test_other_models.py  test_plot_comparisons.py  test_plot_predictions.py  test_plot_slopes.py  test_predictions.py  test_pyfixest.py  test_sklearn.py  test_slopes.py  test_statsmodels_logit.py  test_statsmodels_mixedlm.py  test_statsmodels_mnlogit.py  test_statsmodels_negativebinomial.py  (+9 more)
tests/data/: impartiality.csv
tests/r/: load.R  run.R  test_by_01.csv  test_by_02.csv  test_by_03.csv  test_by_04.csv  (+77 more)
(+7 files in other folders)
