[project]
name = "marginaleffects"
version = "0.0.14"
description = "Predictions, counterfactual comparisons, slopes, and hypothesis tests for statistical models."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "narwhals >=1.10.0",
    "numpy >=2.0.0",
    "patsy >=0.5.6",
    "polars >=1.7.0",
    "plotnine >=0.13.6",
    "scipy >=1.14.1",
]

[project.optional-dependencies]
test = [
    "duckdb >=1.1.2",
    "matplotlib >=3.7.1",
    "pandas >=2.2.2",
    "pyarrow >=17.0.0",
    "pyfixest >=0.24.2",
    "statsmodels >=0.14.0",
    "typing-extensions >=4.7.0",
]

[tool.uv]
dev-dependencies = [
  "pytest >=8.1.1,<9",
  "pytest-xdist >=3.6.1",
  "ruff>=0.6.4",
]


[tool.pytest.ini_options]
markers =[
    "plot: marks plot tests (slow)",
]
