[project]
name = "marginaleffects"
version = "0.1.0"
license = "GPL-3.0-or-later"
description = "Predictions, counterfactual comparisons, slopes, and hypothesis tests for statistical models."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "formulaic >=1.0.2",
    "narwhals >=1.10.0",
    "numpy >=2.0.0",
    "patsy >=0.5.6",
    "polars >=1.7.0",
    "pydantic >=2.10.3",
    "plotnine >=0.13.6",
    "scipy >=1.14.1",
]

[tool.setuptools.packages.find]
exclude = ["qmd_files/*"]


[project.optional-dependencies]
test = [
    "duckdb >=1.1.2",
    "matplotlib >=3.7.1",
    "linearmodels >=6.1",
    "pandas >=2.2.2",
    "pyarrow >=17.0.0",
    "pyfixest >=0.24.2",
    "statsmodels >=0.14.0",
    "scikit-learn",
    "typing-extensions >=4.7.0",
]

[tool.uv]
dev-dependencies = [
  "patsy",
  "pytest >=8.1.1,<9",
  "pytest-xdist >=3.6.1",
  "ruff>=0.6.4",
  "pre-commit",
]


[tool.pytest.ini_options]
markers =[
    "plot: marks plot tests (slow)",
]
